--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: "선물하기 좋은 선물을 고르고 골라서 소개하는 블
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /Jason
-google_analytics: 'UA-46278016-1'
-disqus: 'demowebsite'
+google_analytics: 'G-LEDK33SBL2'
+disqus: 'my-blog-hhjj31klok'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
